--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
     background:rgb(56, 52, 52);
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 page {
@@ -7,6 +8,7 @@ background:white;
 display: block;
 margin: 0 auto;
 box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+font-family: 'Raleway', sans-serif;
 }
 
 page[size="A4"]{
@@ -16,20 +18,90 @@ height: 29.7cm;
 
 .container {
     padding: 1in;
-    background: LightGray;
+    background: white;
     display: grid;
     grid-template-columns: 30% 10% 60%;
-    grid-template-rows: 29.7cm;
+    grid-template-rows: 4.95cm 4.95cm 4.95cm 4.95cm 4.95cm 4.95cm;
+    grid-template-areas:
+      "info info"
+      "profilesummary profilesummary"
+      "skills skills"
+      "experience experience"
+      "education education"
+      "links links";
+  
 }
 
 .col-1{
-    background: green;
+    background: white;
 }
 
 .col-2{
-    background: blue;
+    background: white;
 }
 
 .col-3{
-    background: yellow;
+    background: white;
+}
+
+.row-1 {
+    background: LightSalmon;
+    grid-area: info;
+}
+.row-2 {
+    background: PaleTurquoise;
+    grid-area: info;
+}
+.row-3 {
+    background: lightpink;
+    grid-area: info;
+}
+.row-4 {
+    background: LightSkyBlue;
+    grid-area: info;
+}
+.row-5 {
+    background: PaleGreen;
+    grid-area: info;
+}
+.row-6 {
+    background: BlanchedAlmond;
+    grid-area: info;
+}
+
+hr {
+    position: relative;
+    border: none;
+    width: 330px;
+    height: 3px;
+    background: black;
+    margin-bottom: 10px;
+    margin-left:0px;
+}
+
+.short-lines {
+    height: 2px;
+    width: 10px;
+    position: sticky;
+    
+}
+
+#name-large {
+    font-size: 35px;
+}
+
+#role {
+    font-size: 18.5px;
+    color: crimson;
+}
+
+#address {
+    font-size: 12px;
+    margin-top: -10px;
+    border: none;
+    font-weight: 600;
+}
+
+#phonenumber {
+    color:crimson;
 }
