--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ body {
     margin: 0 auto;
     box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
     font-family: 'Raleway', sans-serif;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Each item in the grid contains numbers */
@@ -149,4 +151,10 @@ hr {
 
 #line-5 {
     margin-top: 30px;
+}
+
+@media only screen and (max-width: 700px) {
+    .page {
+        width:794px;
+    }
 }
